--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.3",
-    "lucide-react": "^0.562.0",
     "@google/genai": "^1.37.0",
+    "framer-motion": "^12.29.2",
+    "lucide-react": "^0.562.0",
+    "react": "^19.2.3",
+    "react-countup": "^6.5.3",
+    "react-dom": "^19.2.3",
     "react-router-dom": "^7.12.0",
-    "react-dom": "^19.2.3"
+    "recharts": "^3.7.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
