--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   },
   "dependencies": {
     "@google/genai": "^1.37.0",
-    "framer-motion": "^12.29.2",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
+    "@tsparticles/react": "^3.0.0",
+    "framer-motion": "^12.34.2",
     "lucide-react": "^0.562.0",
     "react": "^19.2.3",
     "react-countup": "^6.5.3",
     "react-dom": "^19.2.3",
     "react-router-dom": "^7.12.0",
-    "recharts": "^3.7.0"
+    "recharts": "^3.7.0",
+    "three": "^0.182.0",
+    "tsparticles": "^3.9.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
